test/functions/iterators/errors/const-violation.future
bug: shouldn't be able to yield const things by ref
#23970
